add endpoint to find diary entries by user and date
removed old endpoint for finding diary entries by date only