@@ -3,10 +3,11 @@ package com.mj.calorietracker.service;
 import com.mj.calorietracker.exception.FoodAlreadyExistsException;
 import com.mj.calorietracker.exception.ResourceNotFoundException;
 import com.mj.calorietracker.mapper.FoodMapper;
+import com.mj.calorietracker.model.MealDiaryEntries;
 import com.mj.calorietracker.model.NutritionInfo;
 import com.mj.calorietracker.model.add.AddDiaryEntryAndFood;
 import com.mj.calorietracker.model.add.AddDiaryEntry;
-import com.mj.calorietracker.model.update.UpdateDiaryEntry;
+import com.mj.calorietracker.model.DiaryEntry;
 import com.mj.calorietracker.repository.DiaryEntryRepository;
 import com.mj.calorietracker.repository.FoodRepository;
 import com.mj.calorietracker.repository.UnitRepository;
@@ -21,8 +22,11 @@ import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
+import static com.mj.calorietracker.enums.ExceptionMessages.*;
 import static com.mj.calorietracker.util.NutritionValueConvertor.convertToServingQuantity;
+import static java.util.stream.Collectors.groupingBy;
 
 @Service
 @AllArgsConstructor
@@ -36,12 +40,21 @@ public class DiaryService {
     private final DiaryMapper diaryMapper;
     private final FoodMapper foodMapper;
 
-    public final List<UpdateDiaryEntry> findAllDiaryEntries() {
+    public final List<DiaryEntry> findAllDiaryEntries() {
         return diaryEntryRepository.findAll().stream().map(diaryMapper::toModel).toList();
     }
 
-    public final List<UpdateDiaryEntry> findDiaryEntriesByDate(LocalDate entryDate) {
-        return diaryEntryRepository.findAllByEntryDate(entryDate).stream().map(diaryMapper::toModel).toList();
+    public final List<MealDiaryEntries> findDiaryEntriesByUserIdAndDate(UUID userId, LocalDate entryDate) {
+        if (userRepository.findById(userId).isPresent()) {
+            return diaryEntryRepository.findAllByUserIdAndEntryDate(userId, entryDate).stream()
+                    .collect(groupingBy(DiaryEntryEntity::getMeal))
+                    .entrySet().stream()
+                    .map(mealListEntry -> new MealDiaryEntries().setMeal(mealListEntry.getKey())
+                            .setDiaryEntries(mealListEntry.getValue().stream().map(diaryMapper::toModel).toList()))
+                    .collect(Collectors.toList());
+        } else {
+            throw new ResourceNotFoundException(USER_NOT_FOUND.getMessage());
+        }
     }
 
     public final void addDiaryEntry(AddDiaryEntry addDiaryEntry) {
@@ -59,7 +72,7 @@ public class DiaryService {
         try {
             foodService.addFood(foodMapper.toModel(addDiaryEntryAndFood));
         } catch (FoodAlreadyExistsException e) {
-            System.out.println("Food could not be saved! Proceeding to log in diary only!");
+            System.out.println(DIARY_FOOD_COULD_NOT_BE_SAVED.getMessage());
         }
         AddDiaryEntryAndFood convertedToServingQuantity = addDiaryEntryAndFood.setNutritionInfo(convertToServingQuantity(addDiaryEntryAndFood.getNutritionInfo(), addDiaryEntryAndFood.getServingQuantity()));
 
@@ -70,19 +83,19 @@ public class DiaryService {
     public final void deleteDiaryEntry(UUID diaryId) {
         diaryEntryRepository.findById(diaryId).ifPresentOrElse(diaryEntryRepository::delete,
                 () -> {
-                    throw new ResourceNotFoundException("Could not find a diary entry with the specified id!");
+                    throw new ResourceNotFoundException(DIARY_ENTRY_NOT_FOUND.getMessage());
                 });
     }
 
     private void validate(AddDiaryEntry addDiaryEntry, Optional<FoodEntity> optionalFoodEntity) {
         if(optionalFoodEntity.isEmpty()) {
-            throw new ResourceNotFoundException("Could not find food with the specified id!");
+            throw new ResourceNotFoundException(FOOD_NOT_FOUND.getMessage());
         }
         if(userRepository.findById(addDiaryEntry.getUserId()).isEmpty()) {
-            throw new ResourceNotFoundException("Could not find user with the specified id!");
+            throw new ResourceNotFoundException(USER_NOT_FOUND.getMessage());
         }
         if(unitRepository.findById(addDiaryEntry.getUnitId()).isEmpty()) {
-            throw new ResourceNotFoundException("Could not find unit of measurement with the specified id!");
+            throw new ResourceNotFoundException(UNIT_NOT_FOUND.getMessage());
         }
     }
 
